--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "bootstrap-datepicker": "^1.9.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "mdbootstrap": "^4.20.0"
   }
