--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-datepicker": "^1.9.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "mdbootstrap": "^4.20.0"
+    "mdbootstrap": "^4.20.0",
+    "mongoose": "^6.2.10"
   }
 }
