--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.17.3",
     "mdbootstrap": "^4.20.0",
     "mongoose": "^6.2.10"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6"
   }
 }
